Attempted to fix the issue of topdiv being too wide

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,6 @@ div.top_bar{
     color: #fff;
     padding: 10px;
     text-align: center;
-    width: 100%;
     height: 5vh;
+    top: 0;
 }
